syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.alvoratrack.grpc.fleet";
option java_outer_classname = "FleetTrackingProto";

package fleet;

// Position update from tracker-service
message FleetPositionUpdate {
  string vehicle_id = 1;
  double latitude = 2;
  double longitude = 3;
  double speed_kph = 4;
  int64 timestamp = 5;
  string event = 6;
}

// Acknowledgment response
message FleetPositionAck {
  bool received = 1;
  string vehicle_id = 2;
  string message = 3;
}

// Request to get all fleet positions
message FleetPositionsRequest {
}

// Response with all fleet positions
message FleetPositionsResponse {
  int32 count = 1;
  repeated FleetPositionUpdate positions = 2;
}

// Request for single vehicle position
message VehiclePositionRequest {
  string vehicle_id = 1;
}

// Fleet tracking service in AlvoraCore
service FleetTrackingService {
  // Receive position update from tracker-service
  rpc UpdatePosition(FleetPositionUpdate) returns (FleetPositionAck);

  // Stream positions from tracker-service
  rpc StreamPositions(stream FleetPositionUpdate) returns (stream FleetPositionAck);

  // Get all fleet positions
  rpc GetFleetPositions(FleetPositionsRequest) returns (FleetPositionsResponse);

  // Get single vehicle position
  rpc GetVehiclePosition(VehiclePositionRequest) returns (FleetPositionUpdate);
}
