syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.alvoratrack.grpc";
option java_outer_classname = "VehicleTrackingProto";

package tracking;

// Position sent from vehicle
message VehiclePosition {
  string vehicle_id = 1;
  double latitude = 2;
  double longitude = 3;
  double speed_kph = 4;
  int32 bearing = 5;
  int64 timestamp = 6;

  // Optional fields
  double altitude = 7;
  double accuracy = 8;
  bool ignition = 9;
  bool motion = 10;
  int32 satellites = 11;
}

// Server acknowledgment
message PositionAck {
  bool received = 1;
  string vehicle_id = 2;
  string status = 3;           // "ok", "invalid", "rate_limited"
  string message = 4;          // Error details if any
}

// Route assignment from server
message RouteAssignment {
  string route_id = 1;
  repeated Waypoint waypoints = 2;
}

message Waypoint {
  string id = 1;
  double latitude = 2;
  double longitude = 3;
  string address = 4;
  int32 sequence = 5;
}

// Tracking update (server to vehicle)
message TrackingUpdate {
  string vehicle_id = 1;
  string status = 2;                    // "tracking", "idle", "offline"
  RouteAssignment route = 3;            // Optional route assignment
}

// The tracking service
service VehicleTrackingService {
  // Single position report
  rpc ReportPosition(VehiclePosition) returns (PositionAck);

  // Stream positions (recommended for continuous tracking)
  rpc StreamPositions(stream VehiclePosition) returns (stream PositionAck);

  // Bidirectional: send positions, receive updates & routes
  rpc TrackVehicle(stream VehiclePosition) returns (stream TrackingUpdate);
}